<resources>
    <string name="app_name">VeryMuchToDo</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="your_name">Enter your name</string>
    <string name="your_email">Enter your email</string>
    <string name="your_pass">Enter your password</string>
    <string name="auth_failed">Authentification failed</string>
    <string name="error">ERROR!</string>
    <string name="invalid_mail">Email address is not valid!</string>
    <string name="invalid_name">Name must be min 3 chars long!</string>
    <string name="invalid_pass">Password must be min 6 chars long!</string>
    <string name="list_name">List name</string>
    <string name="short_desc">Short description</string>
    <string name="emergency">Emergency</string>
    <string name="create_list">Save ToDo list</string>
    <string name="list_not_completed">List is not completed!</string>
    <string name="desc_too_long">Description is too long</string>
    <string name="title_to_long">Title is too long</string>
    <string name="cancel">Cancel</string>
    <string name="content">Content</string>
    <string name="create_item">Save todo list item</string>
    <string name="task_completed">Task is completed!</string>
    <string name="task_not_completed">Task is not completed!</string>
    <string name="create_item_add_new">Save todo list item and add new</string>
    <string name="item_list_deleted">List is deleted or changed by another user.</string>
    <string name="lists">Lists</string>
    <string name="messages">Messages</string>
    <string name="users">Users</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="todo_lists">ToDo lists</string>
    <string name="type_message">Type your message</string>
    <string name="not_msg_creator">You are not creator of this message!</string>
    <string name="msg_too_long">Message is to long!</string>
    <string name="get_permission">Get Location permission</string>
    <string name="not_registered">Not registered</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register_here">Register here</string>
    <string name="forgot_password">Forgot password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail_not_valid">Email is not valid</string>
    <string name="password_not_valid">Password must be between 6 and 15 letters long</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="back_to_login">Back to login</string>
    <string name="name_not_valid">Display name must be between 3 and 24 letters long</string>
    <string name="confirm_not_valid">Passwords don\'t match</string>
    <string name="check_mail_for_verification">Check your email to verify account</string>
    <string name="check_mail_for_pass_reset">Check your email to reset pasword</string>
    <string name="ok">OK</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout_confirm">Do you really want to logout?</string>
    <string name="edit_pic_from">Edit picture from</string>
    <string name="edit_name">Change your name?</string>
    <string name="edit_mail">Change your email address?</string>
    <string name="edit_pass">Change Your password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="sucess">Success</string>
    <string name="name_unchanged">Name is not valid or is unchanged</string>
    <string name="mail_unchanged">Email is not valid or is unchanged</string>
    <string name="take_picture">Take a picture</string>
    <string name="auth_error">"ERROR: "</string>
    <string name="email_chooser">\"Send email using...\"</string>
    <string name="stacks_frag_label">StacksFragment</string>
    <string name="messages_frag_label">MessagesFragment</string>
    <string name="map_frag_label">MapFragment</string>
    <string name="users_frag_label">UsersFragment</string>
    <string name="profile_frag_label">ProfileFragment</string>
    <string name="stacks">Stacks</string>
    <string name="register_frag_label">RegisterFragment</string>
    <string name="login_frag_label">LoginFragment</string>
    <string name="your_message">Your message</string>
    <string name="chat_frag_label">ChatsFragment</string>
    <string name="chat">Chat</string>
    <string name="chats">Chats</string>
    <string name="new_chat">New chat</string>
    <string name="participants">"Participants: "</string>
    <string name="messages_no">"Messages: "</string>
    <string name="args_current_chat">currentChat</string>
    <string name="select_members">Select chat members</string>
    <string name="crate_chat">Create chat</string>
    <string name="new_stack">New stack</string>
    <string name="main_frag_label">MainFragment</string>
</resources>
