<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_lists"
        android:title="@string/lists"
        android:icon="@drawable/ic_list_white_24dp"/>

    <item
        android:id="@+id/main_msg"
        android:title="@string/messages"
        android:icon="@drawable/ic_message_white_24dp"/>

    <item
        android:id="@+id/main_users"
        android:title="@string/users"
        android:icon="@drawable/ic_people_white_24dp"/>

    <item
        android:id="@+id/main_map"
        android:title="@string/map"
        android:icon="@drawable/ic_map_white_24dp"/>

    <item
        android:id="@+id/main_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_close_white_24dp"/>

</menu>