<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clicker"
            type="com.andraganoid.verymuchtodo.auth.LoginFragment" />

        <variable
            name="viewModel"
            type="com.andraganoid.verymuchtodo.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_in_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/sign_in_email"
            style="@style/EditText"
            android:hint="@string/your_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.userMail}"
            android:selection="@{viewModel.userMail.length()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".15" />

        <EditText
            android:id="@+id/sign_in_password"
            style="@style/EditText"
            android:imeOptions="actionDone"
            android:hint="@string/your_pass"
            android:inputType="textPassword"
            android:selection="@{viewModel.userPass.length()}"
            android:text="@={viewModel.userPass}"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Button"
            android:onClick="@{()->clicker.onLoginConfirm()}"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />

        <TextView
            android:id="@+id/sign_in_not_registred"
            style="@style/EditText"
            android:onClick="@{()->clicker.onNotRegistered()}"
            android:text="@string/not_registered"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>