<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.andraganoid.verymuchtodo.model.TodoList" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".todo.list.ListEditFragment">

        <EditText
            android:id="@+id/new_todo_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/input_box"
            android:hint="@string/list_name"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".25" />

        <EditText
            android:id="@+id/new_todo_list_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/input_box"
            android:hint="@string/short_desc"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/new_todo_list_title" />

        <CheckBox
            android:id="@+id/new_todo_list_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/emergency"
            app:layout_constraintTop_toBottomOf="@+id/new_todo_list_desc" />

        <Button
            android:id="@+id/new_todo_list_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/input_box"
            android:text="@string/create_list"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/new_todo_list_emergency" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>