<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="menuAlert"
            type="com.andraganoid.verymuchtodo.todo.menu.MenuAlert" />

        <variable
            name="clicker"
            type="com.andraganoid.verymuchtodo.todo.menu.MenuClicker" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBack01"
        tools:context=".todo.Todo">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/todo_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBack01"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextColor="@color/colorWhite"
            app:titleTextColor="@color/colorWhite"
            tools:ignore="MissingConstraints" />

        <FrameLayout
            android:id="@+id/todo_fragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/main_bottom_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_toolbar" />


        <LinearLayout
            android:id="@+id/main_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBack01"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                style="@style/MenuItemText"
                android:drawableTop="@drawable/ic_list_white_24dp"
                android:onClick="@{()->clicker.onListItemClicked()}"
                android:text="@string/lists"
                android:textColor="@{menuAlert.listAlert ? @color/colorAccent : @color/colorWhite}"
                app:drawableTint="@{menuAlert.listAlert ? @color/colorAccent : @color/colorWhite}" />

            <TextView
                style="@style/MenuItemText"
                android:drawableTop="@drawable/ic_message_white_24dp"
                android:onClick="@{()->clicker.onMessageItemClicked()}"
                android:text="@string/messages"
                android:textColor="@{menuAlert.messageAlert ? @color/colorAccent : @color/colorWhite}"
                app:drawableTint="@{menuAlert.messageAlert ? @color/colorAccent : @color/colorWhite}" />


            <TextView
                style="@style/MenuItemText"
                android:drawableTop="@drawable/ic_people_white_24dp"
                android:onClick="@{()->clicker.onUserItemClicked()}"
                android:text="@string/users" />

            <TextView
                style="@style/MenuItemText"
                android:drawableTop="@drawable/ic_map_white_24dp"
                android:onClick="@{()->clicker.onMapItemClicked()}"
                android:text="@string/map" />

            <TextView
                style="@style/MenuItemText"
                android:drawableTop="@drawable/ic_close_white_24dp"
                android:onClick="@{()->clicker.onLogoutItemClicked()}"
                android:text="@string/logout" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>