<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgorundColor"
    tools:context=".kauth.LoginFragment">

    <TextView
        android:id="@+id/title"
        style="@style/TitleText"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/userNameEt"
        style="@style/AuthEditText"
        android:layout_marginTop="32dp"
        android:hint="@string/your_user_name"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/userPassEt"
        style="@style/AuthEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/your_pass"
        app:layout_constraintTop_toBottomOf="@+id/userNameEt"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/backgorundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPassEt" />

    <TextView
        android:id="@+id/notRegisterLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/not_registered_yet"
        android:textColor="@color/mid"
        android:textSize="@dimen/smallTextSize"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/userPassEt"
        app:layout_constraintEnd_toStartOf="@+id/goRegister"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/goRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_here"
        android:textColor="@color/mid"
        android:textSize="@dimen/smallTextSize"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/userPassEt"
        app:layout_constraintStart_toEndOf="@+id/notRegisterLabel"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>