<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="viewModel"
            type="com.andraganoid.verymuchtodo.auth.AuthViewModel" />

        <variable
            name="fragment"
            type="com.andraganoid.verymuchtodo.auth.RegisterFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            tools:context=".auth.RegisterFragment">

            <TextView
                android:id="@+id/registerFragmentTitleTv"
                style="@style/TitleText"
                android:layout_marginTop="64dp"
                android:text="@string/register"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/registerNameEt"
                style="@style/AuthEditText"
                android:layout_marginTop="32dp"
                android:hint="@string/your_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/registerFragmentTitleTv"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/registerMailEt"
                style="@style/AuthEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/your_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/registerNameEt"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/registerPassEt"
                style="@style/AuthEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/your_pass"
                android:imeOptions="actionNext"
                android:inputType="@{viewModel.passIsVisible? InputType.TYPE_CLASS_TEXT: (InputType.TYPE_CLASS_TEXT|InputType.TYPE_TEXT_VARIATION_PASSWORD)}"
                app:layout_constraintTop_toBottomOf="@+id/registerMailEt"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/registerPassToggle"
                android:layout_width="@dimen/bar_height"
                android:layout_height="@dimen/bar_height"
                android:onClick="@{()->fragment.togglePasswordVisibility()}"
                android:scaleType="center"
                tint="@color/primDark"
                android:src="@{viewModel.passIsVisible?@drawable/ic_visibility_on:@drawable/ic_visibility_off}"
                app:layout_constraintBottom_toBottomOf="@id/registerPassEt"
                app:layout_constraintEnd_toEndOf="@+id/registerPassEt"
                app:layout_constraintTop_toTopOf="@id/registerPassEt" />

            <EditText
                android:id="@+id/registerConfirmPassEt"
                style="@style/AuthEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/confirm_pass"
                android:imeOptions="actionDone"
                android:inputType="@{viewModel.passIsVisible? InputType.TYPE_CLASS_TEXT: (InputType.TYPE_CLASS_TEXT|InputType.TYPE_TEXT_VARIATION_PASSWORD)}"
                app:layout_constraintTop_toBottomOf="@+id/registerPassEt"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/registerConfirmPassToggle"
                tint="@color/primDark"
                android:layout_width="@dimen/bar_height"
                android:layout_height="@dimen/bar_height"
                android:onClick="@{()->fragment.togglePasswordVisibility()}"
                android:scaleType="center"
                android:src="@{viewModel.passIsVisible?@drawable/ic_visibility_on:@drawable/ic_visibility_off}"
                app:layout_constraintBottom_toBottomOf="@id/registerConfirmPassEt"
                app:layout_constraintEnd_toEndOf="@+id/registerConfirmPassEt"
                app:layout_constraintTop_toTopOf="@id/registerConfirmPassEt" />

            <TextView
                android:id="@+id/registerBtn"
                style="@style/buttonSmall"
                android:layout_marginTop="32dp"
                android:onClick="@{()-> fragment.submitRegistration()}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerConfirmPassEt" />

            <TextView
                android:id="@+id/notRegisterLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:onClick="@{()-> viewModel.back()}"
                android:text="@string/back_to_login"
                android:textColor="@color/primMid"
                android:textSize="@dimen/smallTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>