<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.andraganoid.verymuchtodo.ktodo.chat.dialog.NewChatDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_settings"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_members"
            android:textColor="@color/backgorundColor"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newChatRecView"
            android:layout_width="match_parent"
            android:layout_height="240sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/newChatOkBtn"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:listitem="@layout/new_chat_item" />


        <Button
            android:id="@+id/newChatOkBtn"
            style="@style/buttonSmall"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:onClick="@{()-> fragment.createChat()}"
            android:paddingHorizontal="16dp"
            android:text="@string/crate_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/newChatCancelBtn"
            style="@style/buttonSmall"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:onClick="@{()-> fragment.cancel()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>




