<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="fragment"
            type="com.andraganoid.verymuchtodo.ktodo.settings.SettingsDialogFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_settings"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:layout_marginTop="8dp"
            android:onClick="@{()->fragment.myProfile()}"
            android:visibility="@{fragment.isLogoutSelected?View.GONE:View.VISIBLE}"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account"
                android:tint="@color/backgroundColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/edit_profile"
                android:textColor="@color/backgroundColor"
                android:textSize="@dimen/dialogTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profileIcon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logoutContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:layout_marginTop="8dp"
            android:onClick="@{()->fragment.logout()}"
            android:visibility="@{fragment.isLogoutSelected?View.GONE:View.VISIBLE}"
            app:layout_constraintTop_toBottomOf="@id/profileContainer">

            <ImageView
                android:id="@+id/logoutIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:tint="@color/backgroundColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/logout"
                android:textColor="@color/backgroundColor"
                android:textSize="@dimen/dialogTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/logoutIcon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logoutConfirmContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:visibility="@{fragment.isLogoutSelected?View.VISIBLE:View.GONE}"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/logoutComfirmLabel"
                style="@style/dialogTextView"
                android:text="@string/logout_confirm"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/logoutCancelBtn"
                style="@style/buttonSmall"
                android:layout_margin="32dp"
                android:onClick="@{()-> fragment.cancelLogout()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/logoutConfirmBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoutComfirmLabel" />

            <TextView
                android:id="@+id/logoutConfirmBtn"
                style="@style/buttonSmall"
                android:onClick="@{()-> fragment.applyLogout()}"
                android:text="@string/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/logoutCancelBtn"
                app:layout_constraintTop_toBottomOf="@id/logoutComfirmLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>